# Elixis

./: .checkyourself.yml  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  llms-full.txt  llms.txt  openapi.yaml  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: agent-law.yml  ci.yml  repo-health.yml
agent-docs/: forensics-cross-domain-threads.md
archive/2026-04-08-local-notes/: marketing-pass-pre-elixis-working-name.md
docs/: DEPLOY_SETUP.md  index.html  llms.txt  robots.txt  sitemap.xml
docs/adr/: 0001-source-corpus-market-kit-orchestration.md
docs/agent-law/: empower-orchestrator.md
docs/archive/2026-04-08-local-notes/: README.md  handoff-current-state.md  marketing-pass-soulcraft.md  (+2 more)
elixis/: __init__.py  __main__.py  backup.py  bead.py  engine.py  entities.py  expression_dna.py  graph.py  ingest.py  knowledge.py  llm.py  logging_config.py  market.py  mcp_server.py  naming.py  parsing.py  patterns.py  process_trace.py  quality.py  research.py  resolution.py  sentiment.py  synthesis.py  thread.py  traces.py  translate.py  validation.py  verification.py
elixis/data/: archetypes.json  taxonomy.json
elixis/lenses/: __init__.py  brand.py  design.py  identity.py
elixis/templates/: landing.html
fugax/: __init__.py  __main__.py  backup.py  engine.py  entities.py  graph.py  knowledge.py  llm.py  logging_config.py  mcp_server.py  naming.py  parsing.py  patterns.py  research.py  resolution.py  synthesis.py  traces.py  translate.py  validation.py
fugax/data/: archetypes.json  traits.json
fugax/lenses/: __init__.py  brand.py  identity.py
fugax/templates/: landing.html
scripts/: deploy.sh  rate-limit.lua
skills/elixis/: SKILL.md
soulcraft/: __init__.py  __main__.py  backup.py  bead.py  engine.py  entities.py  expression_dna.py  graph.py  knowledge.py  llm.py  logging_config.py  mcp_server.py  naming.py  parsing.py  patterns.py  quality.py  research.py  resolution.py  sentiment.py  synthesis.py  traces.py  translate.py  validation.py  verification.py
soulcraft/data/: archetypes.json  characters.jsonl  domains.json  entity_types.json  relationships.json
soulcraft/lenses/: __init__.py  brand.py  design.py
soulcraft/templates/: landing.html
tests/: __init__.py  test_backup.py  test_bead.py  test_deploy_script.py  test_docs_landing.py  test_engine.py  test_entities.py  test_expression_dna.py  test_graph.py  test_http_server.py  test_ingest.py  test_integration.py  test_knowledge.py  test_lenses.py  test_llm.py  test_logging_config.py  test_main.py  test_mcp_server.py  test_mock_pipeline.py  test_naming.py  test_parsing.py  test_patterns.py  test_process_trace.py  test_quality.py  test_repo_health_workflow.py  test_resolution.py  test_sentiment.py  test_synthesis.py  test_thread.py  test_traces.py  test_translate.py  test_validation.py  test_verification.py
traefik/: docker-compose.traefik.yml  elixis.yml  fugax.yml  soulcraft.yml
(+2 files in other folders)
