[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "elixis"
version = "1.0.0"
description = "Glass Bead Game synthesis engine for identity, brand, design, naming, and SOUL.md outputs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Kyanite Labs" },
]
keywords = [
    "ai",
    "naming",
    "branding",
    "identity",
    "llm",
    "synthesis",
    "persona",
    "soul-md",
    "openclaw",
    "mcp",
    "entity-extraction",
    "pattern-analysis",
    "archetype",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
elixis = "elixis.__main__:main"

[project.urls]
Homepage = "https://github.com/KyaniteLabs/Elixis"
Repository = "https://github.com/KyaniteLabs/Elixis"
Issues = "https://github.com/KyaniteLabs/Elixis/issues"

[tool.setuptools.packages.find]
include = ["elixis*"]

[tool.setuptools.package-data]
elixis = ["templates/*.html", "templates/*.css", "templates/*.js"]
