[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "elixis"
version = "1.0.0"
description = "Local-first AI pattern synthesis engine for Source Corpus ingestion, Market Kit orchestration, identity, brand voice, design systems, and naming research."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Kyanite Labs" },
]
keywords = [
    "ai",
    "source-corpus",
    "market-kit",
    "marketing",
    "naming",
    "branding",
    "positioning",
    "identity",
    "llm",
    "synthesis",
    "persona",
    "soul-md",
    "openclaw",
    "brand-voice",
    "design-system",
    "entity-extraction",
    "pattern-analysis",
    "archetype",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
elixis = "elixis.__main__:main"

[project.urls]
Homepage = "https://github.com/KyaniteLabs/Elixis"
Repository = "https://github.com/KyaniteLabs/Elixis"
Issues = "https://github.com/KyaniteLabs/Elixis/issues"

[tool.setuptools.packages.find]
include = ["elixis*"]

[tool.setuptools.package-data]
elixis = ["templates/*.html", "templates/*.css", "templates/*.js", "static/*.svg"]
